--- a/src/components/Details/Details.css
+++ b/src/components/Details/Details.css
@@ -11,7 +11,7 @@
   border-radius: 25px;
   padding: 55px 50px 0 0;
   text-align: right;
-  z-index: 1;
+  z-index: -2;
   margin: 50px 0px 50px 40px;
 }
 
